completed sidebar section

--- a/twitter.html
+++ b/twitter.html
@@ -582,14 +582,19 @@
         <div class="fixed-message-box">
           <p class="fixed-message-text">Messages</p>
           <div class="fixed-message-icons">
-            <div class="fixed-message-icon-container">
+            <div class="fixed-message-icon-container fixed-message-tooltip-container">
               <i class="fa-regular fa-envelope"></i>
               <i class="fa-solid fa-plus"></i>
+              <p class="fixed-message-tooltip message-tooltip-fixed">New message</p>
             </div>
-            <i class="fa-solid fa-angles-up"></i>
+            <div class="fixed-message-tooltip-container">
+              <i class="fa-solid fa-angles-up"></i>
+              <p class="fixed-message-tooltip">Expand</p>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </body>
 </html>
+
